--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.13",
-    "mongoose-double": "^0.0.1"
+    "mongoose-double": "^0.0.1",
+    "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
